refactor: migrate command system to ExecutableCommand (#248)
* refactor: new command system

* chore: small changes and fixes

* refactor: better notify owner method

* refactor: extracted parsing methods to dedicated utility class

* refactor: migrate to ExecutableCommand

* refactor: convert AbstractCommand to CommandMetadata interface

* chore: small changes